// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model TaskGroup {
  id         String     @id
  name       String
  createdAt  DateTime   @default(now())
  updatedAt  DateTime   @updatedAt
  tasks      Task[]
}

model Task {
  id          String      @id
  title       String
  description String
  status      TaskStatus  @default(INPROGRESS)
  dueDate     DateTime
  taskGroup   TaskGroup   @relation(fields: [taskGroupId], references: [id])
  taskGroupId String
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
}
enum TaskStatus {
  INPROGRESS
  DONE
  ARCHIVE
}